# aleph-vm

./: .dockerignore  .gitignore  .gitmodules  CONFIGURE_CADDY.md  Justfile  LICENSE  LICENSE.txt  Pipfile  README.md  TESTING.md  alembic.ini  config.json  host-vsock.py  pyproject.toml  run_supervisor_host.sh  start-custom-vm.sh  start-microvm.sh  start-vm.sh  start_qemu_microvm.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/: extract_droplet_ipv4.py  test_runtime_on_droplet.sh
.github/workflows/: build-deb-package-and-integration-tests.yml  build-deb-package-and-integration-tests.yml.disabled  build-deb-package.yml  code-quality.yml  codeql-analysis.yml  deploy-main-on-staging.yml  deploy-main-on-staging.yml.disabled  pr-rating.yml  release-diagnostic-vm-code-volume.yml  release-diagnostic-vm.yml  release-on-tag.yml  release-runtime.yml  test-build-examples.yml  test-integration-fakedata.yml  test-new-runtime-examples.yml  test-on-droplet-debian-11.yml  test-on-droplet-debian-12.yml  test-on-droplet-ubuntu-20.04.yml  test-on-droplet-ubuntu-22.04.yml  test-on-droplet.yml  test-on-droplets-matrix.yml  test-using-pytest.yml
doc/: INSTALL-Debian-11.md  INSTALL-Debian-12.md  INSTALL-Ubuntu-20.04.md  INSTALL-Ubuntu-22.04.md  INSTALL.md  confidential.md  operator_auth.md
docker/: publish_vm_connector.sh  publish_vm_supervisor_dev.sh  run_vm_connector.sh  run_vm_supervisor.sh  run_vm_supervisor_2.sh  vm_connector.dockerfile  vm_supervisor-dev-docker.dockerfile  vm_supervisor-dev.dockerfile  vm_supervisor.dockerfile
docs/plans/: 2026-04-14-aleph-gateway-design.md  2026-04-14-aleph-gateway-implementation.md  2026-04-29-async-cold-migration-design.md  2026-04-29-async-cold-migration-implementation.md  2026-05-11-allocation-auth-signatures-review.md  2026-05-28-aleph-vm-architecture-backport-design.html  2026-05-28-aleph-vm-architecture-backport-design.md  2026-05-28-phase-0a-hypervisor-proto-bindings.md  2026-05-29-message-free-supervisor-create-plan.md  2026-05-29-message-free-supervisor-create-reboot-design.md  2026-05-29-phase-0b-supervisor-abc-design.md  2026-05-29-phase-0b-supervisor-abc-implementation.md  2026-05-29-phase-0c-create-vm-decouple-design.md  2026-06-01-wire-agent-onto-supervisor-design.md  2026-06-02-wire-agent-supervisor-pr1-plan.md  2026-06-04-wire-agent-supervisor-pr2-plan.md  2026-06-06-wire-agent-supervisor-pr3-plan.md  2026-06-08-supervisor-expiry-design.md  2026-06-08-supervisor-expiry-plan.md  2026-06-09-supervisor-owner-auth-registry-design.md  2026-06-09-supervisor-owner-auth-registry-plan.md  2026-06-09-supervisor-update-watching-design.md  2026-06-09-supervisor-update-watching-plan.md  2026-06-10-agent-record-persistence-design.md  2026-06-10-agent-record-persistence-plan.md  2026-06-10-supervisor-status-reads-design.md  2026-06-10-supervisor-status-reads-plan.md  2026-06-11-grpc-process-split-design.md
examples/: Makefile  README.md  confidential_instance_message_from_aleph.json  example_fastapi_1.py  instance_message_from_aleph.json  message_from_aleph.json  message_from_aleph_docker_runtime.json  program_message_from_aleph.json  qemu_message_from_aleph.json
examples/example_confidential_image/: README.md  build_debian_image.sh  setup_debian_rootfs.sh
examples/example_django/: manage.py
examples/example_docker_container/: entrypoint.sh
examples/example_fastapi/: README.md  main.py  model.py  requests.py
examples/example_fastapi_2/: __init__.py  main.py
examples/example_http_expressjs/: .dockerignore  Dockerfile  README.md  package.json
examples/example_http_go/: go.mod  server.go
examples/example_http_js/: Dockerfile  Makefile  package-lock.json
examples/example_http_rust/: Cargo.toml  Dockerfile  Makefile  README.md
examples/example_pip/: main.py
examples/fishnet_api/: README.md  main.py  model.py  requests.py  requirements.txt  test.py
examples/fishnet_cod/: LICENSE.txt  README.md  pyproject.toml  requirements.txt
examples/fishnet_cod/src/fishnet_cod/: __init__.py  execution.py  model.py
examples/fishnet_executor/: main.py  requirements.txt  test.py
examples/sysbench_performance/: sysbench.py
examples/volumes/: Dockerfile  build_squashfs.sh
firecracker/: __init__.py  config.py  microvm.py
guest_api/: __main__.py
kernels/: build-kernel.sh  linux.config  microvm-kernel-x86_64-5.10.config  microvm-kernel-x86_64-6.1.config  qemu-defconfig
network/: firewall.py  network.py
packaging/: Dockerfile  Makefile  debian-11.dockerfile  debian-12-sevctl.dockerfile  debian-12.dockerfile  debian-13.dockerfile  extract_requirements.sh  requirements-debian-11.txt  requirements-ubuntu-20.04.txt  requirements-ubuntu-22.04.txt  ubuntu-20.04.dockerfile  ubuntu-22.04.dockerfile  ubuntu-24.04.dockerfile  version_from_git.py
packaging/nixos/: README.md  aleph-vm.nix  config.nix  configuration.nix  default.nix  setup.sh  vms.nix
proto/: README.md  hypervisor.proto  supervisor.proto
runtimes/aleph-alpine-3.13-http/: add_files.sh  create_disk_image.sh  init1.py
runtimes/aleph-alpine-3.13-python/: create_disk_image.sh  init0.sh  init1.py  loading.html  update_inits.sh
runtimes/aleph-debian-11-python/: create_disk_image.sh  error  errorHandler.js  init0.sh  init1.py  loading.html  update_inits.sh
runtimes/aleph-debian-12-node18/: create_disk_image.sh  init0.sh  init1.py  run.sh
runtimes/aleph-debian-12-python/: create_disk_image.sh  init0.sh  init1.py  loading.html  update_inits.sh
runtimes/aleph-docker-rootfs/: Dockerfile  create-debian-disk.sh  init0.sh  (+1 more)
scripts/: check_proto_clean.sh  crn_upgrade.sh  generate_proto.py  install-qemu.sh  serial_client.py  setup-dev-env.sh
tutorials/: ADVANCED.md  README.md  REQUIREMENTS.md  SERVER.md  TESTING.md
vm_connector/: README.md  conf.py  main.py
vm_supervisor/: INSTANCES.md  README.md  __init__.py  __main__.py  alembic.ini  conf.py  ip.py  ipfs.py  messages.py  metrics.py  models.py  pool.py  pubsub.py  reactor.py  resources.py  run.py  snapshot_manager.py  snapshots.py  status.py  storage.py  supervisor.py  tasks.py  utils.py  version.py  views.py
(+327 files in other folders)
