[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "aleph-vm"
dynamic = ["version"]
description = "Aleph.im VM execution engine"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name="Hugo Herter", email="git@hugoherter.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: aiohttp",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Distributed Computing",
]
dependencies = [
  "pydantic[dotenv]==1.10.13",
  "aiohttp==3.8.6",
  "aiodns==3.1.0",
  "setproctitle==1.3.3",
  "pyyaml==6.0.1",
  "aleph-message==0.4.2",
  "jwskate==0.8.0",
  "eth-account==0.9.0",
  "sentry-sdk==1.31.0",
  "aioredis==1.3.1",
  "psutil==5.9.5",
  "py-cpuinfo==9.0.0",
  "schedule==1.2.1",
  "nftables @ git+https://salsa.debian.org/pkg-netfilter-team/pkg-nftables#egg=nftables&subdirectory=py",
  "msgpack==1.0.7",
  "packaging==23.2",
  "jsonschema==4.19.1",
  "qmp==0.0.1",
  "dbus-python==1.3.2",
  "systemd-python==235",
  "systemd-python==235",
  "superfluid~=0.2.1",
  "sqlalchemy[asyncio]",
  "aiosqlite==0.19.0",
  "alembic==1.13.1",
  "aiohttp_cors~=0.7.0",
  "pyroute2==0.7.12",
]

[project.urls]
Documentation = "https://docs.aleph.im/nodes/compute/"
Issues = "https://github.com/aleph-im/aleph-vm/issues"
Source = "https://github.com/aleph-im/aleph-vm"
Discussions = "https://community.aleph.im/"

[project.scripts]
aleph-vm = "aleph.vm.orchestrator.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/aleph"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.default]
platforms = ["linux"]
dependencies = [
#  "git+https://salsa.debian.org/pkg-netfilter-team/pkg-nftables#egg=nftables&subdirectory=py",
]

[tool.hatch.envs.default.scripts]
orchestrator = "aleph-vm orchestrator run {args:--help}"
config = "aleph-vm orchestrator config {args:--help}"
check = "aleph-vm controller run {args:--help}"

[tool.hatch.envs.testing]
dependencies = [
  "pytest==8.0.1",
  "pytest-cov==4.1.0",
  "pytest-mock==3.12.0",
  "pytest-asyncio==0.23.5",
]
[tool.hatch.envs.testing.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black==24.1.1",
  "mypy==1.8.0",
  "ruff==0.1.15",
  "isort==5.13.2",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy {args:src/aleph/vm/ tests/ examples/example_fastapi runtimes/aleph-debian-12-python}"
style = [
#  "ruff {args:.}",
  "black --check --diff {args:.}",
  "isort --check-only --profile black {args:.}",
]
fmt = [
  "black {args:.}",
#  "ruff --fix {args:.}",
  "isort --profile black {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.black]
target-version = ["py39"]
line-length = 120
#skip-string-normalization = true

[tool.mypy]
python_version = "3.9"
install_types = true
non_interactive = true
ignore_missing_imports = true
explicit_package_bases = true
check_untyped_defs = true

[tool.ruff]
target-version = "py39"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
#  # Allow non-abstract empty methods in abstract base classes
#  "B027",
#  # Allow boolean positional values in function calls, like `dict.get(... True)`
#  "FBT003",
#  # Ignore checks for possible passwords
#  "S105", "S106", "S107",
#  # Ignore complexity
#  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # Allow the use of assert statements
  "S101"
]
#unfixable = [
#  # Don't touch unused imports
#  "F401",
#]

[tool.ruff.isort]
known-first-party = ["aleph.vm"]

#[tool.ruff.flake8-tidy-imports]
#ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["aleph.vm", "tests"]
branch = true
parallel = true
omit = [
  "src/aleph/vm/__about__.py",
]

[tool.coverage.paths]
aleph_vm = ["src/aleph/vm", "*/aleph-vm/src/aleph/vm"]
tests = ["tests", "*/aleph-vm/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
