[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "aleph-vm"
dynamic = ["version"]
description = "Aleph.im VM execution engine"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = []
authors = [
  { name="Hugo Herter", email="git@hugoherter.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Framework :: aiohttp",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Distributed Computing",
]
dependencies = [
  "pydantic[dotenv]~=1.10.13",
  "aiohttp==3.9.5",
  "aiodns==3.1.0",
  "setproctitle==1.3.3",
  "pyyaml==6.0.1",
  "aleph-message==0.4.9",
  "eth-account~=0.10",
  "sentry-sdk==1.31.0",
  "aioredis==1.3.1",
  "psutil==5.9.5",
  "py-cpuinfo==9.0.0",
  "schedule==1.2.1",
  "nftables @ git+https://salsa.debian.org/pkg-netfilter-team/pkg-nftables#egg=nftables&subdirectory=py",
  "msgpack==1.0.7",
  "packaging==23.2",
  "jsonschema==4.19.1",
  "qmp==1.1.0",
  "dbus-python==1.3.2",
  "systemd-python==235",
  "systemd-python==235",
  "superfluid@git+https://github.com/1yam/superfluid.py.git@1yam-add-base",
  "sqlalchemy[asyncio]>=2.0",
  "aiosqlite==0.19.0",
  "alembic==1.13.1",
  "aiohttp_cors~=0.7.0",
  "pyroute2==0.7.12",
  "jwcrypto==1.5.6",
  "python-cpuid==0.1.0"
]

[project.urls]
Documentation = "https://docs.aleph.im/nodes/compute/"
Issues = "https://github.com/aleph-im/aleph-vm/issues"
Source = "https://github.com/aleph-im/aleph-vm"
Discussions = "https://community.aleph.im/"

[project.scripts]
aleph-vm = "aleph.vm.orchestrator.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/aleph"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.default]
platforms = ["linux"]
dependencies = [
#  "git+https://salsa.debian.org/pkg-netfilter-team/pkg-nftables#egg=nftables&subdirectory=py",
]

[tool.hatch.envs.default.scripts]
orchestrator = "aleph-vm orchestrator run {args:--help}"
config = "aleph-vm orchestrator config {args:--help}"
check = "aleph-vm controller run {args:--help}"

[tool.hatch.envs.testing]
type = "virtual"
system-packages = true
dependencies = [
  "eth_typing==4.3.1", # Temp fix for bug in CI with 5.0.0
  "pytest==8.2.1",
  "pytest-cov==5.0.0",
  "pytest-mock==3.14.0",
  "pytest-asyncio==0.23.7",
  "pytest-aiohttp==1.0.5",
]
[tool.hatch.envs.testing.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --durations=10 --cov  {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black==24.3.0",
  "mypy==1.8.0",
  "ruff==0.4.6",
  "isort==5.13.2",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy {args:src/aleph/vm/ tests/ examples/example_fastapi runtimes/aleph-debian-12-python}"
style = [
#  "ruff {args:.}",
  "black --check --diff {args:.}",
  "isort --check-only --profile black {args:.}",
]
fmt = [
  "black {args:.}",
#  "ruff --fix {args:.}",
  "isort --profile black {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]
norecursedirs = [
  "runtimes/aleph-debian-11-python/rootfs/",
  "runtimes/aleph-debian-12-python/rootfs/",
]

[tool.black]
target-version = ["py39"]
line-length = 120
#skip-string-normalization = true

[tool.mypy]
python_version = "3.10"
install_types = true
non_interactive = true
ignore_missing_imports = true
explicit_package_bases = true
check_untyped_defs = true

[tool.ruff]
target-version = "py310"
line-length = 120
[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
#  # Allow non-abstract empty methods in abstract base classes
#  "B027",
#  # Allow boolean positional values in function calls, like `dict.get(... True)`
#  "FBT003",
#  # Ignore checks for possible passwords
#  "S105", "S106", "S107",
#  # Ignore complexity
#  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # Allow the use of assert statements
  "S101"
]
#unfixable = [
#  # Don't touch unused imports
#  "F401",
#]

isort.known-first-party = ["aleph.vm"]

#[tool.ruff.flake8-tidy-imports]
#ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["aleph.vm", "tests"]
branch = true
parallel = true
omit = [
  "src/aleph/vm/__about__.py",
]

[tool.coverage.paths]
aleph_vm = ["src/aleph/vm", "*/aleph-vm/src/aleph/vm"]
tests = ["tests", "*/aleph-vm/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
